--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/.bin/webpack-dev-server",
+    "dev": "webpack-dev-server",
     "test": "npx -n --experimental-vm-modules jest ",
     "build": "webpack",
     "start": "webpack --watch"
@@ -24,18 +24,20 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "css-loader": "^5.0.0",
     "debug": "^4.2.0",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
+    "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.5.2",
     "jest-cli": "^26.5.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
