--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server",
-    "test": "npx -n --experimental-vm-modules jest ",
+    "test": "jest ",
     "build": "webpack",
     "start": "webpack --watch"
   },
