--- a/.github/workflows/hexlet-check.yml
+++ b/.github/workflows/hexlet-check.yml
@@ -32,6 +32,7 @@ jobs:
         # Install and build project
         run: |
           make install
+          make build
         # Add environment variables
         env:
           CI: true
