--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
-    "popper.js": "^1.16.1"
+    "on-change": "^2.2.2",
+    "popper.js": "^1.16.1",
+    "yup": "^0.32.8"
   }
 }
