--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rss-reader",
+  "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Application for easy viewing of rss feeds",
   "main": "index.js",
